Finaliza modulo Dev1: Correção de bugs visuais e revisão